# supertonic

./: .gitignore  Cargo.toml  README.md  setup_android.sh
.github/workflows/: publish.yml  test.yml
crates/core/: .gitignore  Cargo.toml  README.md  REPORT.md  download_assets.py
crates/core/docs/: ARCHITECTURE.md  USAGE.md
crates/core/src/: audio.rs  config.rs  error.rs  lib.rs  model.rs  text.rs  utils.rs
crates/core/tests/: integration_tests.rs  unit_tests.rs
crates/tauri-plugin-supertonic/: Cargo.toml  build.rs
crates/tauri-plugin-supertonic/permissions/autogenerated/: reference.md
crates/tauri-plugin-supertonic/permissions/autogenerated/commands/: get_engine_info.toml  load_engine.toml  load_voice.toml  save_wav.toml  speak_batch.toml
crates/tauri-plugin-supertonic/permissions/schemas/: schema.json
crates/tauri-plugin-supertonic/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
