[package]
name = "supertonic-tts"
version = "0.1.0"
edition = "2021"

[features]
default = ["desktop"]
desktop = ["ort/download-binaries"]
android = ["ort/load-dynamic"]

[dependencies]
# ONNX Runtime - features controlled by crate features above
ort = { version = "2.0.0-rc.7", default-features = false, features = ["ndarray", "std"] }

# Array processing (like NumPy)
ndarray = { version = "0.16", features = ["rayon"] }
rand = "0.8"
rand_distr = "0.4"

# Parallel processing
rayon = "1.10"

# Audio processing
hound = "3.5"
rustfft = "6.2"

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"

# Unicode normalization
unicode-normalization = "0.1"

# Regular expressions
regex = "1.10"

# System calls
libc = "0.2"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
thiserror = "2.0.17"

[lib]
name = "supertonic_tts"
path = "src/lib.rs"

[[bin]]
name = "tts"
path = "src/bin/tts.rs"
