[package]
name = "tauri-plugin-supertonic"
version = "0.1.0"
edition = "2021"
links = "tauri-plugin-supertonic"

[dependencies]
tauri = { version = "2.0.0", features = ["wry"] }
supertonic-tts = { path = "../core", package = "supertonic-tts" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
base64 = "0.21"

[build-dependencies]
tauri-plugin = { version = "2.0.0", features = ["build"] }
