[package]
name = "supertonic-demo"
version = "0.1.0"
description = "Supertonic TTS Demo App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

[features]
default = ["desktop"]
desktop = ["tauri-plugin-supertonic/desktop"]
android = ["tauri-plugin-supertonic/android"]

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0", features = [] }
tauri-plugin-supertonic = { path = "../../../crates/tauri-plugin-supertonic", default-features = false }

